<resources>
    <string name="app_name">Healios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">Comments:</string>
    <string name="description">Description</string>
    <string name="post_heading">Post Heading</string>
    <string name="email">Email Address</string>
    <string name="address">Address:</string>
    <string name="name">Name:</string>
    <string name="turn_on">Please turn on</string>
    <string name="no_internet_title">No Internet</string>
    <string name="no_internet_body">You’re not connected to the Internet.\nPlease connect and retry.</string>
    <string name="post_description">Post Description</string>
    <string name="post_title">Post Title</string>
</resources>